--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "recruitment_web",
-    "short_name": "recruitment_web",
+    "name": "pinkin_flutter_web_admin_dashboard",
+    "short_name": "pinkin_flutter_web_admin_dashboard",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#hexcode",
-    "theme_color": "#hexcode",
+    "background_color": "#0175C2",
+    "theme_color": "#0175C2",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
